<resources>
    <string name="app_name">Score Keeper App</string>
    <string name="competition">UEFA European Championsip Finals</string>
    <string name="goal">Goal!!!</string>
    <string name="country_portugal">Portugal</string>
    <string name="country_france">France</string>
    <string name="score_text">Score</string>
    <string name="faul_text">Fauls</string>
    <string name="faul_button">Faul</string>

</resources>
